--- a/UebungMVC_V10/UebungMVC_V10.csproj
+++ b/UebungMVC_V10/UebungMVC_V10.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DBModels\Datum.cs" />
+    <Compile Include="Models\DBModels\Projekt.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\VModels\DataVM.cs" />
